// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dot /> Don't Render any circle when cx is invalid 1`] = `
<div>
  <svg
    class="recharts-surface"
    height="400"
    viewBox="0 0 400 400"
    width="400"
  >
    <title />
    <desc />
  </svg>
</div>
`;

exports[`<Dot /> Render 1 circle in simple Dot 1`] = `
<div>
  <svg
    class="recharts-surface"
    height="400"
    viewBox="0 0 400 400"
    width="400"
  >
    <title />
    <desc />
    <circle
      class="recharts-dot"
      cx="100"
      cy="100"
      fill="#ff7300"
      r="5"
    />
  </svg>
</div>
`;
